# open-sonar

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: AgentHeader.tsx  App.tsx  ShellTerminal.tsx  UpdateChecker.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/collector/: cost.rs  mod.rs  parser.rs  watcher.rs
src-tauri/src/commands/: agent.rs  mod.rs  stats.rs
src-tauri/src/db/: mod.rs
src-tauri/src/detection/: loop_detector.rs  mod.rs
src-tauri/src/pty/: manager.rs
src/components/agent/: AddAgentButton.tsx  AgentColumn.tsx  AgentHeader.tsx  AgentKPI.tsx  AgentSummary.tsx  Terminal.tsx  TerminalInput.tsx
src/components/layout/: AgentGrid.tsx  KPIBar.tsx  Toolbar.tsx
src/components/shared/: CostCounter.tsx  StatusDot.tsx
src/hooks/: useAgent.ts  usePty.ts  useStats.ts
src/lib/: cost.ts
src/pages/: AnalyticsPage.tsx  HistoryPage.tsx  SettingsPage.tsx  TerminalsPage.tsx
src/stores/: agentStore.ts
